# opengl-boilerplate

./: CMakeLists.txt
include/: application.h
scripts/: build.sh
src/: main.cpp
